--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261551474205816%22%3A%22CVhlR0y0%22%2C%2261556426205089%22%3A%22zQlIhU8j%22%2C%22100091806060471%22%3A%2260CVVPq5%22%7D",
+        "value": "%7B%2261551474205816%22%3A%22CVhlR0y0%22%2C%22100091806060471%22%3A%2260CVVPq5%22%2C%22100088865102476%22%3A%22iNUIrnX8%22%2C%2261556426205089%22%3A%22f6YUJqhY%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.500488042831421",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     },
     {
         "key": "wd",
@@ -77,61 +86,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     },
     {
         "key": "fr",
-        "value": "0VIP2xYvcwYexftBE.AWVqV81Zs1ock6LCloCHYa5GLzQ.Bmj4H0..AAA.0.0.Bmn4ir.AWVC8lS-62Q",
+        "value": "0VIP2xYvcwYexftBE.AWWHYiIgpWiLr4AEmG9h_sOd9Vs.Bmj4H0..AAA.0.0.Bmn7DJ.AWVK4DczPN4",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     },
     {
         "key": "c_user",
-        "value": "100091806060471",
+        "value": "61556426205089",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     },
     {
         "key": "xs",
-        "value": "11%3AzW58rRlGJTGAxg%3A2%3A1721731244%3A-1%3A13394",
+        "value": "5%3A9QEcVsJsZq-FoA%3A2%3A1721741520%3A-1%3A14443",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
-    },
-    {
-        "key": "m_page_voice",
-        "value": "100091806060471",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     },
     {
         "key": "fbl_st",
-        "value": "101326376%3BT%3A28695643",
+        "value": "101236781%3BT%3A28695692",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2569%3Btimestamp%3A1721738603",
+        "value": "v2%3Bclient_version%3A2569%3Btimestamp%3A1721741529",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T12:44:59.345Z",
-        "lastAccessed": "2024-07-23T12:44:59.345Z"
+        "creation": "2024-07-23T13:32:25.094Z",
+        "lastAccessed": "2024-07-23T13:32:25.094Z"
     }
 ]
