--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261551474205816%22%3A%22CVhlR0y0%22%2C%22100091806060471%22%3A%2260CVVPq5%22%2C%22100088865102476%22%3A%22iNUIrnX8%22%2C%2261556426205089%22%3A%22f6YUJqhY%22%7D",
+        "value": "%7B%2261551474205816%22%3A%22CVhlR0y0%22%2C%22100088865102476%22%3A%22iNUIrnX8%22%2C%2261556426205089%22%3A%22f6YUJqhY%22%2C%22100091806060471%22%3A%22ByEVOX9j%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.500488042831421",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     },
     {
         "key": "wd",
@@ -77,52 +86,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     },
     {
         "key": "fr",
-        "value": "0VIP2xYvcwYexftBE.AWWHYiIgpWiLr4AEmG9h_sOd9Vs.Bmj4H0..AAA.0.0.Bmn7DJ.AWVK4DczPN4",
+        "value": "0VIP2xYvcwYexftBE.AWUY9dkdcDSrlGUENZdZyUi92aE.Bmj4H0..AAA.0.0.Bmn8jL.AWX-X5pLTjo",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     },
     {
         "key": "c_user",
-        "value": "61556426205089",
+        "value": "100091806060471",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     },
     {
         "key": "xs",
-        "value": "5%3A9QEcVsJsZq-FoA%3A2%3A1721741520%3A-1%3A14443",
+        "value": "21%3AFJgxyBm6oo8CWA%3A2%3A1721747659%3A-1%3A13394",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     },
     {
         "key": "fbl_st",
-        "value": "101222038%3BT%3A28695742",
+        "value": "100727511%3BT%3A28695794",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2569%3Btimestamp%3A1721744532",
+        "value": "v2%3Bclient_version%3A2571%3Btimestamp%3A1721747665",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T14:22:46.982Z",
-        "lastAccessed": "2024-07-23T14:22:46.982Z"
+        "creation": "2024-07-23T15:14:35.149Z",
+        "lastAccessed": "2024-07-23T15:14:35.149Z"
     }
 ]
