--- a/appstate.json
+++ b/appstate.json
@@ -1,57 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261551474205816%22%3A%22CVhlR0y0%22%2C%22100088865102476%22%3A%22iNUIrnX8%22%2C%2261556426205089%22%3A%22f6YUJqhY%22%2C%22100091806060471%22%3A%22ByEVOX9j%22%7D",
+        "value": "%7B%22100095016803089%22%3A%22SjtkHv65%22%2C%2261550061382300%22%3A%228czYtrvl%22%2C%22100091806060471%22%3A%22Rzd95EIX%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
+        "creation": "2024-07-25T13:36:51.256Z",
+        "lastAccessed": "2024-07-25T13:36:51.256Z"
     },
     {
         "key": "datr",
-        "value": "9IGPZjc9iGOGXQtylfp_5eAK",
+        "value": "lOWhZihemSbnDna2OsROKBg-",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
+        "creation": "2024-07-25T13:36:51.256Z",
+        "lastAccessed": "2024-07-25T13:36:51.256Z"
     },
     {
         "key": "sb",
-        "value": "9IGPZkLYJsOLmlzCa6vjvqL6",
+        "value": "lOWhZsPbnMgmJSD-TisYTk4e",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B665x360x1.500488042831421",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
+        "creation": "2024-07-25T13:36:51.256Z",
+        "lastAccessed": "2024-07-25T13:36:51.256Z"
     },
     {
         "key": "locale",
@@ -59,17 +32,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
+        "creation": "2024-07-25T13:36:51.256Z",
+        "lastAccessed": "2024-07-25T13:36:51.256Z"
     },
     {
-        "key": "dpr",
+        "key": "vpd",
+        "value": "v1%3B665x360x1.500488042831421",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-25T13:36:51.256Z",
+        "lastAccessed": "2024-07-25T13:36:51.256Z"
+    },
+    {
+        "key": "m_pixel_ratio",
         "value": "1.500488042831421",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
+        "creation": "2024-07-25T13:36:51.256Z",
+        "lastAccessed": "2024-07-25T13:36:51.256Z"
     },
     {
         "key": "wd",
@@ -77,17 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
-    },
-    {
-        "key": "fr",
-        "value": "0VIP2xYvcwYexftBE.AWUY9dkdcDSrlGUENZdZyUi92aE.Bmj4H0..AAA.0.0.Bmn8jL.AWX-X5pLTjo",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
+        "creation": "2024-07-25T13:36:51.256Z",
+        "lastAccessed": "2024-07-25T13:36:51.256Z"
     },
     {
         "key": "c_user",
@@ -95,34 +68,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
+        "creation": "2024-07-25T13:36:51.256Z",
+        "lastAccessed": "2024-07-25T13:36:51.256Z"
+    },
+    {
+        "key": "fr",
+        "value": "0OSyvQMfnVZPFtDsM.AWXp-q81aC_aAOOsuej0Yl0oSuo.BmoeWU..AAA.0.0.BmolRw.AWXJaVVeyAc",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-25T13:36:51.256Z",
+        "lastAccessed": "2024-07-25T13:36:51.256Z"
     },
     {
         "key": "xs",
-        "value": "21%3AFJgxyBm6oo8CWA%3A2%3A1721747659%3A-1%3A13394",
+        "value": "41%3AfZFTMbHDjBlspA%3A2%3A1721914482%3A-1%3A13394",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2571%3Btimestamp%3A1721875662",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
+        "creation": "2024-07-25T13:36:51.256Z",
+        "lastAccessed": "2024-07-25T13:36:51.256Z"
     },
     {
         "key": "fbl_st",
-        "value": "101039202%3BT%3A28697927",
+        "value": "100734440%3BT%3A28698574",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-25T02:47:54.023Z",
-        "lastAccessed": "2024-07-25T02:47:54.023Z"
+        "creation": "2024-07-25T13:36:51.256Z",
+        "lastAccessed": "2024-07-25T13:36:51.256Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2571%3Btimestamp%3A1721914490",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-25T13:36:51.256Z",
+        "lastAccessed": "2024-07-25T13:36:51.256Z"
     }
 ]
