--- a/appstate.json
+++ b/appstate.json
@@ -1,75 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100095016803089%22%3A%22SjtkHv65%22%2C%2261550061382300%22%3A%228czYtrvl%22%2C%22100091806060471%22%3A%22efewie3e%22%7D",
+        "value": "%7B%22100091806060471%22%3A%22q42AB2b8%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.858Z",
-        "lastAccessed": "2024-07-26T03:07:22.858Z"
+        "creation": "2024-07-27T11:58:02.240Z",
+        "lastAccessed": "2024-07-27T11:58:02.240Z"
     },
     {
         "key": "datr",
-        "value": "lOWhZihemSbnDna2OsROKBg-",
+        "value": "D-CkZqAj0whM4hvFfThBvvGR",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.858Z",
-        "lastAccessed": "2024-07-26T03:07:22.858Z"
+        "creation": "2024-07-27T11:58:02.240Z",
+        "lastAccessed": "2024-07-27T11:58:02.240Z"
     },
     {
         "key": "sb",
-        "value": "lOWhZsPbnMgmJSD-TisYTk4e",
+        "value": "D-CkZiTNV30xnjpt74kuTTq1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.858Z",
-        "lastAccessed": "2024-07-26T03:07:22.858Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.858Z",
-        "lastAccessed": "2024-07-26T03:07:22.858Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B665x360x1.500488042831421",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.858Z",
-        "lastAccessed": "2024-07-26T03:07:22.858Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "1.500488042831421",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.858Z",
-        "lastAccessed": "2024-07-26T03:07:22.858Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.858Z",
-        "lastAccessed": "2024-07-26T03:07:22.858Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.858Z",
-        "lastAccessed": "2024-07-26T03:07:22.858Z"
+        "creation": "2024-07-27T11:58:02.240Z",
+        "lastAccessed": "2024-07-27T11:58:02.240Z"
     },
     {
         "key": "wd",
@@ -77,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.858Z",
-        "lastAccessed": "2024-07-26T03:07:22.858Z"
+        "creation": "2024-07-27T11:58:02.240Z",
+        "lastAccessed": "2024-07-27T11:58:02.240Z"
     },
     {
         "key": "c_user",
@@ -86,43 +41,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.858Z",
-        "lastAccessed": "2024-07-26T03:07:22.858Z"
+        "creation": "2024-07-27T11:58:02.240Z",
+        "lastAccessed": "2024-07-27T11:58:02.240Z"
     },
     {
         "key": "fr",
-        "value": "0OSyvQMfnVZPFtDsM.AWXeRTdWQbuLPbT_pGeWzPk7Z-k.BmoeWU..AAA.0.0.BmoxLQ.AWVN0Y3Kl_M",
+        "value": "0VT4cNEeIMa3efVz6.AWWcZEj9IcciRxZmz4iayE9z1w4.BmpOAP..AAA.0.0.BmpOAy.AWXimOcBT5Y",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.859Z",
-        "lastAccessed": "2024-07-26T03:07:22.859Z"
+        "creation": "2024-07-27T11:58:02.240Z",
+        "lastAccessed": "2024-07-27T11:58:02.240Z"
     },
     {
         "key": "xs",
-        "value": "42%3An0Qh87ITbLz1iQ%3A2%3A1721963216%3A-1%3A13394",
+        "value": "13%3AqJjJPdYaIYG-TA%3A2%3A1722081331%3A-1%3A13394",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.859Z",
-        "lastAccessed": "2024-07-26T03:07:22.859Z"
+        "creation": "2024-07-27T11:58:02.240Z",
+        "lastAccessed": "2024-07-27T11:58:02.240Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-27T11:58:02.240Z",
+        "lastAccessed": "2024-07-27T11:58:02.240Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B665x360x1.500488042831421",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-27T11:58:02.240Z",
+        "lastAccessed": "2024-07-27T11:58:02.240Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-27T11:58:02.240Z",
+        "lastAccessed": "2024-07-27T11:58:02.240Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-27T11:58:02.240Z",
+        "lastAccessed": "2024-07-27T11:58:02.240Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2571%3Btimestamp%3A1721963218",
+        "value": "v2%3Bclient_version%3A2573%3Btimestamp%3A1722081463",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.859Z",
-        "lastAccessed": "2024-07-26T03:07:22.859Z"
+        "creation": "2024-07-27T11:58:02.240Z",
+        "lastAccessed": "2024-07-27T11:58:02.240Z"
     },
     {
         "key": "fbl_st",
-        "value": "100729788%3BT%3A28699386",
+        "value": "101233835%3BT%3A28701357",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-26T03:07:22.859Z",
-        "lastAccessed": "2024-07-26T03:07:22.859Z"
+        "creation": "2024-07-27T11:58:02.240Z",
+        "lastAccessed": "2024-07-27T11:58:02.240Z"
     }
 ]
