--- a/appstate.json
+++ b/appstate.json
@@ -1,57 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261551474205816%22%3A%22JGrSyzyL%22%7D",
+        "value": "%7B%2261564107626890%22%3A%22fxEVGhbc%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.723Z",
-        "lastAccessed": "2024-08-08T13:28:03.723Z"
+        "creation": "2024-08-08T14:36:10.724Z",
+        "lastAccessed": "2024-08-08T14:36:10.724Z"
     },
     {
         "key": "datr",
-        "value": "D-CkZqAj0whM4hvFfThBvvGR",
+        "value": "jNa0ZmSnKF2zleS-vy_jevv6",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.724Z",
-        "lastAccessed": "2024-08-08T13:28:03.724Z"
+        "creation": "2024-08-08T14:36:10.724Z",
+        "lastAccessed": "2024-08-08T14:36:10.724Z"
     },
     {
         "key": "sb",
-        "value": "D-CkZiTNV30xnjpt74kuTTq1",
+        "value": "jNa0ZomBao2_Qqruu3h-3E8v",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.724Z",
-        "lastAccessed": "2024-08-08T13:28:03.724Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.724Z",
-        "lastAccessed": "2024-08-08T13:28:03.724Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.724Z",
-        "lastAccessed": "2024-08-08T13:28:03.724Z"
-    },
-    {
-        "key": "locale",
-        "value": "pa_IN",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.724Z",
-        "lastAccessed": "2024-08-08T13:28:03.724Z"
+        "creation": "2024-08-08T14:36:10.724Z",
+        "lastAccessed": "2024-08-08T14:36:10.724Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -59,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.724Z",
-        "lastAccessed": "2024-08-08T13:28:03.724Z"
+        "creation": "2024-08-08T14:36:10.724Z",
+        "lastAccessed": "2024-08-08T14:36:10.724Z"
     },
     {
         "key": "wd",
@@ -68,61 +41,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.724Z",
-        "lastAccessed": "2024-08-08T13:28:03.724Z"
+        "creation": "2024-08-08T14:36:10.724Z",
+        "lastAccessed": "2024-08-08T14:36:10.724Z"
     },
     {
         "key": "c_user",
-        "value": "61562963472651",
+        "value": "61564107626890",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.724Z",
-        "lastAccessed": "2024-08-08T13:28:03.724Z"
+        "creation": "2024-08-08T14:36:10.724Z",
+        "lastAccessed": "2024-08-08T14:36:10.724Z"
     },
     {
         "key": "fr",
-        "value": "1GkHlaZ3ekqCbDK0x.AWUQw7AKYEAlhrorZ0_hCItHZkI.BmqJgM..AAA.0.0.BmtMfM.AWUdXUsqa6Q",
+        "value": "0rdvyIu9bJ9t7XPsu.AWW5j6Jpz2zt7eZmZC5bD7f9l1g.BmtNaM..AAA.0.0.BmtNbQ.AWUZSM9iUWk",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.724Z",
-        "lastAccessed": "2024-08-08T13:28:03.724Z"
+        "creation": "2024-08-08T14:36:10.724Z",
+        "lastAccessed": "2024-08-08T14:36:10.724Z"
     },
     {
         "key": "xs",
-        "value": "10%3AyqwZFY2XT7FF2A%3A2%3A1723123660%3A-1%3A14749",
+        "value": "38%3Ay4gmLevXN3fs0w%3A2%3A1723127505%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.724Z",
-        "lastAccessed": "2024-08-08T13:28:03.724Z"
+        "creation": "2024-08-08T14:36:10.724Z",
+        "lastAccessed": "2024-08-08T14:36:10.724Z"
     },
     {
-        "key": "fbl_st",
-        "value": "101039859%3BT%3A28718727",
+        "key": "locale",
+        "value": "en_GB",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.724Z",
-        "lastAccessed": "2024-08-08T13:28:03.724Z"
+        "creation": "2024-08-08T14:36:10.724Z",
+        "lastAccessed": "2024-08-08T14:36:10.724Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2584%3Btimestamp%3A1723123664",
+        "value": "v2%3Bclient_version%3A2584%3Btimestamp%3A1723127511",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.724Z",
-        "lastAccessed": "2024-08-08T13:28:03.724Z"
+        "creation": "2024-08-08T14:36:10.724Z",
+        "lastAccessed": "2024-08-08T14:36:10.724Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100729416%3BT%3A28718791",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-08T14:36:10.724Z",
+        "lastAccessed": "2024-08-08T14:36:10.724Z"
     },
     {
         "key": "vpd",
-        "value": "v1%3B386x360x1.500488042831421",
+        "value": "v1%3B665x360x1.500488042831421",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T13:28:03.724Z",
-        "lastAccessed": "2024-08-08T13:28:03.724Z"
+        "creation": "2024-08-08T14:36:10.724Z",
+        "lastAccessed": "2024-08-08T14:36:10.724Z"
     }
 ]
